# PyThermoEst

./: .gitignore  README.md  pyproject.toml
conversion/: data.py  data2.py  doc-1.ipynb  estimation of heat capacities.xlsx  sheet1.yml  sheet2.yml
data/: sheet1.yml
examples/: doc0.py  joback-exp-0.py  joback-exp-1.py  joback-exp-2.py  zabransky-ruzicka-exp-0.py
examples/antoine/: antoine-1.py  antoine-2.py  antoine_utils.py  data-2.csv  data.csv
examples/joback/: joback-exp-3.py
examples/zabransky-ruzicka/: zabransky-ruzicka-exp-1.py  zabransky-ruzicka-exp-2.py
pyThermoEst/: __init__.py  app.py
pyThermoEst/config/: __init__.py  config.py  setting.py
pyThermoEst/configs/: __init__.py  info.py  settings.py
pyThermoEst/core/: __init__.py  antoine.py  joback.py  zabransky_ruzicka.py
pyThermoEst/data/: cg-1.csv  cg-2.csv  joback.csv  ref1.yml  sheet1.yml  zabransky-ruzicka-1.csv  zabransky-ruzicka-2.csv
pyThermoEst/docs/: __init__.py  antoine.py  core.py  joback.py  manager.py  molcore.py  refcore.py  zabransky_ruzicka.py
pyThermoEst/models/: __init__.py  antoine.py  cg.py  jb.py  ref.py  zr.py
pyThermoEst/util/: __init__.py  tools.py  unit_tools.py
pyThermoEst/utils/: tools.py
release/: v0.2.0.md
